--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    padding-top: 5rem;
+    padding-top: 8rem;
     text-align: center;
   }
 
